# random-vimrc-etc

./: .bashrc  .clangd  .gdbinit_cortex_m4  .nvim-dap.json  .tmux.conf.local  .vimrc  .zshrc  ConEmu.xml  README.md  _vimrc  _vimrc_work  calendar_sample.py  connect-to-bose-qc-earbuds.sh  ds5_to_big_endian.py  flamegraph.sh  gen-llm-logits-venv.sh  init.vim  knapsack.py  local.bazelrc  new_fedora_install.md  rebuild_cscope_database.bat  requirements-dev.txt  sync_folders.sh  venv.sh
block-hot-network-questions/: manifest.json  style.css
kernel-configs/: config.touchscreen
mdcm/: pyproject.toml
mdcm/src/mdcm_setup/: cli.py
mdcm/src/mdcm_setup/files/: AGENTS.md  codex-init-session  codex-tmux  config.toml  tmux-codex.conf
